translator/qasmParser.py
# Generated from qasm.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class qasmParser ( Parser ):

    grammarFileName = "qasm.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'qreg'", "'['", "']'", "';'", "'creg'", 
                     "'id'", "'x'", "'z'", "'s'", "'sdg'", "'h'", "'t'", 
                     "'tdg'", "'swap'", "','", "'cx'", "'cz'", "'rx'", "'('", 
                     "')'", "'ry'", "'rz'", "'u3'", "'measure'", "'->'", 
                     "'*'", "'/'", "'+'", "'-'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'pi'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "OPENQASM", "INCLUDE", "ID", 
                      "INT", "PI", "FLOAT", "WS", "LINE_COMMENT" ]

    RULE_mainprog = 0
    RULE_header = 1
    RULE_qregDecl = 2
    RULE_cregDecl = 3
    RULE_iGate = 4
    RULE_xGate = 5
    RULE_zGate = 6
    RULE_sGate = 7
    RULE_sdgGate = 8
    RULE_hGate = 9
    RULE_tGate = 10
    RULE_tdgGate = 11
    RULE_swapGate = 12
    RULE_cxGate = 13
    RULE_czGate = 14
    RULE_rxGate = 15
    RULE_ryGate = 16
    RULE_rzGate = 17
    RULE_u3Gate = 18
    RULE_measureStmt = 19
    RULE_expr = 20
    RULE_exprMul = 21
    RULE_sign = 22

    ruleNames =  [ "mainprog", "header", "qregDecl", "cregDecl", "iGate", 
                   "xGate", "zGate", "sGate", "sdgGate", "hGate", "tGate", 
                   "tdgGate", "swapGate", "cxGate", "czGate", "rxGate", 
                   "ryGate", "rzGate", "u3Gate", "measureStmt", "expr", 
                   "exprMul", "sign" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    OPENQASM=30
    INCLUDE=31
    ID=32
    INT=33
    PI=34
    FLOAT=35
    WS=36
    LINE_COMMENT=37

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class MainprogContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(qasmParser.EOF, 0)

        def header(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(qasmParser.HeaderContext)
            else:
                return self.getTypedRuleContext(qasmParser.HeaderContext,i)


        def qregDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(qasmParser.QregDeclContext)
            else:
                return self.getTypedRuleContext(qasmParser.QregDeclContext,i)


        def cregDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(qasmParser.CregDeclContext)
            else:
                return self.getTypedRuleContext(qasmParser.CregDeclContext,i)


        def iGate(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(qasmParser.IGateContext)
            else:
                return self.getTypedRuleContext(qasmParser.IGateContext,i)


        def xGate(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(qasmParser.XGateContext)
            else:
                return self.getTypedRuleContext(qasmParser.XGateContext,i)


        def zGate(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(qasmParser.ZGateContext)
            else:
                return self.getTypedRuleContext(qasmParser.ZGateContext,i)


        def sGate(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(qasmParser.SGateContext)
            else:
                return self.getTypedRuleContext(qasmParser.SGateContext,i)


        def sdgGate(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(qasmParser.SdgGateContext)
            else:
                return self.getTypedRuleContext(qasmParser.SdgGateContext,i)


        def hGate(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(qasmParser.HGateContext)
            else:
                return self.getTypedRuleContext(qasmParser.HGateContext,i)


        def tGate(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(qasmParser.TGateContext)
            else:
                return self.getTypedRuleContext(qasmParser.TGateContext,i)


        def tdgGate(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(qasmParser.TdgGateContext)
            else:
                return self.getTypedRuleContext(qasmParser.TdgGateContext,i)


        def swapGate(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(qasmParser.SwapGateContext)
            else:
                return self.getTypedRuleContext(qasmParser.SwapGateContext,i)


        def cxGate(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(qasmParser.CxGateContext)
            else:
                return self.getTypedRuleContext(qasmParser.CxGateContext,i)


        def czGate(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(qasmParser.CzGateContext)
            else:
                return self.getTypedRuleContext(qasmParser.CzGateContext,i)


        def rxGate(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(qasmParser.RxGateContext)
            else:
                return self.getTypedRuleContext(qasmParser.RxGateContext,i)


        def ryGate(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(qasmParser.RyGateContext)
            else:
                return self.getTypedRuleContext(qasmParser.RyGateContext,i)


        def rzGate(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(qasmParser.RzGateContext)
            else:
                return self.getTypedRuleContext(qasmParser.RzGateContext,i)


        def u3Gate(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(qasmParser.U3GateContext)
            else:
                return self.getTypedRuleContext(qasmParser.U3GateContext,i)


        def measureStmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(qasmParser.MeasureStmtContext)
            else:
                return self.getTypedRuleContext(qasmParser.MeasureStmtContext,i)


        def getRuleIndex(self):
            return qasmParser.RULE_mainprog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMainprog" ):
                listener.enterMainprog(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMainprog" ):
                listener.exitMainprog(self)




    def mainprog(self):

        localctx = qasmParser.MainprogContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_mainprog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3253174242) != 0):
                self.state = 65
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [30, 31]:
                    self.state = 46
                    self.header()
                    pass
                elif token in [1]:
                    self.state = 47
                    self.qregDecl()
                    pass
                elif token in [5]:
                    self.state = 48
                    self.cregDecl()
                    pass
                elif token in [6]:
                    self.state = 49
                    self.iGate()
                    pass
                elif token in [7]:
                    self.state = 50
                    self.xGate()
                    pass
                elif token in [8]:
                    self.state = 51
                    self.zGate()
                    pass
                elif token in [9]:
                    self.state = 52
                    self.sGate()
                    pass
                elif token in [10]:
                    self.state = 53
                    self.sdgGate()
                    pass
                elif token in [11]:
                    self.state = 54
                    self.hGate()
                    pass
                elif token in [12]:
                    self.state = 55
                    self.tGate()
                    pass
                elif token in [13]:
                    self.state = 56
                    self.tdgGate()
                    pass
                elif token in [14]:
                    self.state = 57
                    self.swapGate()
                    pass
                elif token in [16]:
                    self.state = 58
                    self.cxGate()
                    pass
                elif token in [17]:
                    self.state = 59
                    self.czGate()
                    pass
                elif token in [18]:
                    self.state = 60
                    self.rxGate()
                    pass
                elif token in [21]:
                    self.state = 61
                    self.ryGate()
                    pass
                elif token in [22]:
                    self.state = 62
                    self.rzGate()
                    pass
                elif token in [23]:
                    self.state = 63
                    self.u3Gate()
                    pass
                elif token in [24]:
                    self.state = 64
                    self.measureStmt()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 70
            self.match(qasmParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HeaderContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPENQASM(self):
            return self.getToken(qasmParser.OPENQASM, 0)

        def INCLUDE(self):
            return self.getToken(qasmParser.INCLUDE, 0)

        def getRuleIndex(self):
            return qasmParser.RULE_header

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeader" ):
                listener.enterHeader(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeader" ):
                listener.exitHeader(self)




    def header(self):

        localctx = qasmParser.HeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_header)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            _la = self._input.LA(1)
            if not(_la==30 or _la==31):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QregDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(qasmParser.ID, 0)

        def INT(self):
            return self.getToken(qasmParser.INT, 0)

        def getRuleIndex(self):
            return qasmParser.RULE_qregDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQregDecl" ):
                listener.enterQregDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQregDecl" ):
                listener.exitQregDecl(self)




    def qregDecl(self):

        localctx = qasmParser.QregDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_qregDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(qasmParser.T__0)
            self.state = 75
            self.match(qasmParser.ID)
            self.state = 76
            self.match(qasmParser.T__1)
            self.state = 77
            self.match(qasmParser.INT)
            self.state = 78
            self.match(qasmParser.T__2)
            self.state = 79
            self.match(qasmParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CregDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(qasmParser.ID, 0)

        def INT(self):
            return self.getToken(qasmParser.INT, 0)

        def getRuleIndex(self):
            return qasmParser.RULE_cregDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCregDecl" ):
                listener.enterCregDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCregDecl" ):
                listener.exitCregDecl(self)




    def cregDecl(self):

        localctx = qasmParser.CregDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_cregDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(qasmParser.T__4)
            self.state = 82
            self.match(qasmParser.ID)
            self.state = 83
            self.match(qasmParser.T__1)
            self.state = 84
            self.match(qasmParser.INT)
            self.state = 85
            self.match(qasmParser.T__2)
            self.state = 86
            self.match(qasmParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IGateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(qasmParser.ID, 0)

        def INT(self):
            return self.getToken(qasmParser.INT, 0)

        def getRuleIndex(self):
            return qasmParser.RULE_iGate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIGate" ):
                listener.enterIGate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIGate" ):
                listener.exitIGate(self)




    def iGate(self):

        localctx = qasmParser.IGateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_iGate)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(qasmParser.T__5)
            self.state = 89
            self.match(qasmParser.ID)
            self.state = 90
            self.match(qasmParser.T__1)
            self.state = 91
            self.match(qasmParser.INT)
            self.state = 92
            self.match(qasmParser.T__2)
            self.state = 93
            self.match(qasmParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class XGateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(qasmParser.ID, 0)

        def INT(self):
            return self.getToken(qasmParser.INT, 0)

        def getRuleIndex(self):
            return qasmParser.RULE_xGate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterXGate" ):
                listener.enterXGate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitXGate" ):
                listener.exitXGate(self)




    def xGate(self):

        localctx = qasmParser.XGateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_xGate)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(qasmParser.T__6)
            self.state = 96
            self.match(qasmParser.ID)
            self.state = 97
            self.match(qasmParser.T__1)
            self.state = 98
            self.match(qasmParser.INT)
            self.state = 99
            self.match(qasmParser.T__2)
            self.state = 100
            self.match(qasmParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ZGateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(qasmParser.ID, 0)

        def INT(self):
            return self.getToken(qasmParser.INT, 0)

        def getRuleIndex(self):
            return qasmParser.RULE_zGate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterZGate" ):
                listener.enterZGate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitZGate" ):
                listener.exitZGate(self)




    def zGate(self):

        localctx = qasmParser.ZGateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_zGate)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(qasmParser.T__7)
            self.state = 103
            self.match(qasmParser.ID)
            self.state = 104
            self.match(qasmParser.T__1)
            self.state = 105
            self.match(qasmParser.INT)
            self.state = 106
            self.match(qasmParser.T__2)
            self.state = 107
            self.match(qasmParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SGateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(qasmParser.ID, 0)

        def INT(self):
            return self.getToken(qasmParser.INT, 0)

        def getRuleIndex(self):
            return qasmParser.RULE_sGate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSGate" ):
                listener.enterSGate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSGate" ):
                listener.exitSGate(self)




    def sGate(self):

        localctx = qasmParser.SGateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_sGate)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(qasmParser.T__8)
            self.state = 110
            self.match(qasmParser.ID)
            self.state = 111
            self.match(qasmParser.T__1)
            self.state = 112
            self.match(qasmParser.INT)
            self.state = 113
            self.match(qasmParser.T__2)
            self.state = 114
            self.match(qasmParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SdgGateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(qasmParser.ID, 0)

        def INT(self):
            return self.getToken(qasmParser.INT, 0)

        def getRuleIndex(self):
            return qasmParser.RULE_sdgGate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSdgGate" ):
                listener.enterSdgGate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSdgGate" ):
                listener.exitSdgGate(self)




    def sdgGate(self):

        localctx = qasmParser.SdgGateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_sdgGate)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(qasmParser.T__9)
            self.state = 117
            self.match(qasmParser.ID)
            self.state = 118
            self.match(qasmParser.T__1)
            self.state = 119
            self.match(qasmParser.INT)
            self.state = 120
            self.match(qasmParser.T__2)
            self.state = 121
            self.match(qasmParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HGateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(qasmParser.ID, 0)

        def INT(self):
            return self.getToken(qasmParser.INT, 0)

        def getRuleIndex(self):
            return qasmParser.RULE_hGate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHGate" ):
                listener.enterHGate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHGate" ):
                listener.exitHGate(self)




    def hGate(self):

        localctx = qasmParser.HGateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_hGate)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(qasmParser.T__10)
            self.state = 124
            self.match(qasmParser.ID)
            self.state = 125
            self.match(qasmParser.T__1)
            self.state = 126
            self.match(qasmParser.INT)
            self.state = 127
            self.match(qasmParser.T__2)
            self.state = 128
            self.match(qasmParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TGateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(qasmParser.ID, 0)

        def INT(self):
            return self.getToken(qasmParser.INT, 0)

        def getRuleIndex(self):
            return qasmParser.RULE_tGate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTGate" ):
                listener.enterTGate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTGate" ):
                listener.exitTGate(self)




    def tGate(self):

        localctx = qasmParser.TGateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_tGate)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(qasmParser.T__11)
            self.state = 131
            self.match(qasmParser.ID)
            self.state = 132
            self.match(qasmParser.T__1)
            self.state = 133
            self.match(qasmParser.INT)
            self.state = 134
            self.match(qasmParser.T__2)
            self.state = 135
            self.match(qasmParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TdgGateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(qasmParser.ID, 0)

        def INT(self):
            return self.getToken(qasmParser.INT, 0)

        def getRuleIndex(self):
            return qasmParser.RULE_tdgGate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTdgGate" ):
                listener.enterTdgGate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTdgGate" ):
                listener.exitTdgGate(self)




    def tdgGate(self):

        localctx = qasmParser.TdgGateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_tdgGate)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(qasmParser.T__12)
            self.state = 138
            self.match(qasmParser.ID)
            self.state = 139
            self.match(qasmParser.T__1)
            self.state = 140
            self.match(qasmParser.INT)
            self.state = 141
            self.match(qasmParser.T__2)
            self.state = 142
            self.match(qasmParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SwapGateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(qasmParser.ID)
            else:
                return self.getToken(qasmParser.ID, i)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(qasmParser.INT)
            else:
                return self.getToken(qasmParser.INT, i)

        def getRuleIndex(self):
            return qasmParser.RULE_swapGate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSwapGate" ):
                listener.enterSwapGate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSwapGate" ):
                listener.exitSwapGate(self)




    def swapGate(self):

        localctx = qasmParser.SwapGateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_swapGate)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(qasmParser.T__13)
            self.state = 145
            self.match(qasmParser.ID)
            self.state = 146
            self.match(qasmParser.T__1)
            self.state = 147
            self.match(qasmParser.INT)
            self.state = 148
            self.match(qasmParser.T__2)
            self.state = 149
            self.match(qasmParser.T__14)
            self.state = 150
            self.match(qasmParser.ID)
            self.state = 151
            self.match(qasmParser.T__1)
            self.state = 152
            self.match(qasmParser.INT)
            self.state = 153
            self.match(qasmParser.T__2)
            self.state = 154
            self.match(qasmParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CxGateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(qasmParser.ID)
            else:
                return self.getToken(qasmParser.ID, i)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(qasmParser.INT)
            else:
                return self.getToken(qasmParser.INT, i)

        def getRuleIndex(self):
            return qasmParser.RULE_cxGate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCxGate" ):
                listener.enterCxGate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCxGate" ):
                listener.exitCxGate(self)




    def cxGate(self):

        localctx = qasmParser.CxGateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_cxGate)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.match(qasmParser.T__15)
            self.state = 157
            self.match(qasmParser.ID)
            self.state = 158
            self.match(qasmParser.T__1)
            self.state = 159
            self.match(qasmParser.INT)
            self.state = 160
            self.match(qasmParser.T__2)
            self.state = 161
            self.match(qasmParser.T__14)
            self.state = 162
            self.match(qasmParser.ID)
            self.state = 163
            self.match(qasmParser.T__1)
            self.state = 164
            self.match(qasmParser.INT)
            self.state = 165
            self.match(qasmParser.T__2)
            self.state = 166
            self.match(qasmParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CzGateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(qasmParser.ID)
            else:
                return self.getToken(qasmParser.ID, i)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(qasmParser.INT)
            else:
                return self.getToken(qasmParser.INT, i)

        def getRuleIndex(self):
            return qasmParser.RULE_czGate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCzGate" ):
                listener.enterCzGate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCzGate" ):
                listener.exitCzGate(self)




    def czGate(self):

        localctx = qasmParser.CzGateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_czGate)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(qasmParser.T__16)
            self.state = 169
            self.match(qasmParser.ID)
            self.state = 170
            self.match(qasmParser.T__1)
            self.state = 171
            self.match(qasmParser.INT)
            self.state = 172
            self.match(qasmParser.T__2)
            self.state = 173
            self.match(qasmParser.T__14)
            self.state = 174
            self.match(qasmParser.ID)
            self.state = 175
            self.match(qasmParser.T__1)
            self.state = 176
            self.match(qasmParser.INT)
            self.state = 177
            self.match(qasmParser.T__2)
            self.state = 178
            self.match(qasmParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RxGateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(qasmParser.ExprContext,0)


        def ID(self):
            return self.getToken(qasmParser.ID, 0)

        def INT(self):
            return self.getToken(qasmParser.INT, 0)

        def getRuleIndex(self):
            return qasmParser.RULE_rxGate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRxGate" ):
                listener.enterRxGate(self)
